versioned_docs/version-7.7/Sekretariat/dodawanie-dokumentow.mdx
---
sidebar_position: 2
id: dodawanie-dokumentow
title: Dodawanie dokumentów
---

# Dodawanie dokumentów

Kliknij przycisk ![Nowy](/img/nowy.png) w pasku narzędzi, aby otworzyć specjalne okno umożliwiające wgranie plików do przetworzenia lub utworzenie nowego dokumentu.

**Wybór plików**

![Nowy dokument](/img/nowy_dokument.png)

**Utwórz dokument**

![Utwórz dokument](/img/nowy_dokument2.png)

**Przejście całego procesu krok po kroku – od dodania dokumentu, przez jego uzupełnianie, aż po księgowanie w SAP – zostało przedstawione w sekcji [Przykładowe procesy](../przyklady-procesow/przyklady-procesow.md).**

## Wybór plików

Proces dodawania dokumentów do systemu składa się z kilku prostych kroków:

**1. Wybierz pliki z komputera** 

   Możesz to zrobić na dwa sposoby:  
   - Kliknij ikonę **“+”** i wybierz dokumenty z folderu,  
   - Przeciągnij dokumenty z folderu bezpośrednio do okna aplikacji.

   ![Przesyłanie plików](/img/przesylanie_dok.png)

**2. Wybierz, czy dokumenty mają zostać przetworzone przez OCR**

   Opcja OCR dostępna jest po prawej stronie – możesz ją <span style={{ color: 'grey' }}>wyłączyć</span> lub pozostawić <span style={{ color: 'blue' }}>włączoną</span>. 

   ![OCR i pliki](/img/wybor_plikow_ocr.png)

Działanie mechanizmu OCR przebiega według następujących kroków:

a. Dokument jest wstępnie rozpoznawany przez mechanizm **Tesseract OCR**.  
b. Mechanizm inicjalny wykrywa regiony i słowa na dokumencie oraz wyszukuje **NIP sprzedawcy**.  
c. SPUMA sprawdza, czy sprzedawca ma przypisany domyślny mechanizm OCR:  
   - **Tak** – dokument jest automatycznie przetwarzany ponownie przez ten mechanizm,  
   - **Nie** – dokument pozostaje wstępnie rozpoznany.  

d. Dokument można ponownie przeprocesować dowolnie wybranym mechanizmem OCR i ustawić go jako domyślny.

:::tip[Podgląd przyporządkowania]
Podgląd przyporządkowania **Sprzedawca ↔ Mechanizm OCR** jest dostępny w aplikacji administracyjnej.  
Administrator może w tym miejscu **przeglądać**, **zmieniać** oraz **ustawiać** domyślne mechanizmy OCR dla poszczególnych sprzedawców.
:::

**3. Kliknij przycisk OK**  
   Rozpoczyna się przesyłanie dokumentów do systemu i ich przetwarzanie.

   ![Przesyłanie](/img/ladowanie_dok.png)

**4. Dokumenty trafiają na listę w Sekretariacie**  
   Po przetworzeniu dokumenty pojawią się w głównej liście widocznej w module **Sekretariat**.

   ![Lista dokumentów](/img/sekretariat_lista.png)

## Utwórz dokument

Opcja **Utwórz dokument** jest przeznaczona do tworzenia dokumentów bez konieczności wgrywania plików. Możesz wykorzystać ją np. do przygotowania zamówienia zakupu bez potrzeby logowania się do systemu SAP.

Proces składa się z:

**1. Wybierz szablon dokumentu**  
   Wybierz z listy odpowiedni szablon, na podstawie którego chcesz utworzyć dokument.

 ![Wybierz szablon](/img/utworz_dok.png)

**2. Kliknij przycisk OK**  
   Dokument zostanie zapisany w systemie jako nowy rekord i pojawi się w głównej liście widocznej w module **Sekretariat**.

**3. Uzupełnij dane i wyślij do SAP**  
Na dalszym etapie, po otwarciu utworzonego dokumentu, uzupełnij go o brakujące informacje, a następnie prześlij do systemu SAP. Szczegółowa instrukcja znajduje się w sekcji [**Proces dla dokumentu pustego**](../przyklady-procesow/przyklad-dokument-pusty.md) .

